gcc/testsuite/rust.test/fail_compilation/func3.rs
fn test(a: i32, b: i32) -> i32 {
    a + b
}

fn main() {
    let a = test(1, true);
}
